# website

./: .gitignore  Cargo.toml  dev.sh  zentner-io.service
src/: main.rs
templates/: blog.tera  error404.tera  error500.tera  index.tera  organizations.tera  projects.tera  shared.tera
templates/css/: shared.css.tera
templates/projects/: blank.tera  clayr.tera  rlog.tera  video-space.tera
