[package]
name = "zentner-io-rocket"
version = "0.1.0"
authors = ["Kyle Zentner <zentner.kyle@gmail.com>"]

[dependencies]
rocket = "^0.2"
rocket_codegen = "^0.2"

serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"

regex = "^0.2"
lazy_static = "^0.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates", "tera_templates", "uuid"]
