[package]
name = "zentner-io-rocket"
version = "0.1.0"
authors = ["Kyle Zentner <zentner.kyle@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"

serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"

regex = "^0.2"
lazy_static = "^0.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates", "tera_templates", "uuid"]
